[gd_scene load_steps=5 format=3 uid="uid://0fx3l1vwyhr4"]

[ext_resource type="Script" uid="uid://cunoru645f6k" path="res://SwitchesAndDoors/switch.gd" id="1_bkl3k"]
[ext_resource type="SpriteFrames" uid="uid://cfwaqjk7xi7r5" path="res://SwitchesAndDoors/Gfx/switch_animation_frames.tres" id="2_6arrv"]
[ext_resource type="PackedScene" uid="uid://1votnx34efdj" path="res://EntityComponents/BWShaderSetter.tscn" id="3_oj7qx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yuyy0"]
size = Vector2(40, 100)

[node name="Switch" type="Area2D"]
collision_layer = 32
collision_mask = 16
script = ExtResource("1_bkl3k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
use_parent_material = true
position = Vector2(-10, 0)
scale = Vector2(5, 5)
sprite_frames = ExtResource("2_6arrv")
animation = &"on"
autoplay = "off"
frame_progress = 0.269819

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-20, 0)
shape = SubResource("RectangleShape2D_yuyy0")

[node name="TimerSimultWindow" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="TimerCooldown" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="TimerBeep" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="BwShaderSetter" parent="." instance=ExtResource("3_oj7qx")]
